changes for android 31

--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,7 @@
   
 
   <link href="assets/css/font-awesome.min.css" rel="stylesheet"/>
-  <!-- un-comment this code to enable service worker
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('service worker installed'))
-        .catch(err => console.error('Error', err));
-    }
-  </script>-->
+  <script src="https://www.paypalobjects.com/api/checkout.js"></script>
 
   <link href="build/main.css" rel="stylesheet">
 
