paypal OK at last

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
   
 <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
+  <script src="app/payment.js"></script>
   <script src="assets/midi/Tone.min.js"></script>
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
