--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -14,13 +14,19 @@
 
 <ion-content padding>
 	<ion-list>
+		<h3>
+			{{ 'Support my work if you want that project to be maintained' | translate }}
+			
+		</h3>
 		<ion-item>
-		<ion-label floating>Enter amount</ion-label>
+		<ion-label floating>Enter Amount</ion-label>
 		<ion-input type="text" [(ngModel)]="amount"></ion-input>
 		</ion-item>
-	
+
 		<button ion-button block (click)="pay()">Make Payment</button>
+
 	</ion-list>
+	
 	</ion-content>
 
 		
