--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
   
 
   <link href="assets/css/font-awesome.min.css" rel="stylesheet"/>
-  <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+
+  <script src="https://www.paypal.com/sdk/js?client-id=AcjInm0WPRMWkQcyVi0mFdmR-jQCU5R5uH-7wS_yAyWpNBU35D5BIk2E6EjuHuGsnX29oGBE_qVmMD6F&currency=EUR" data-namespace="paypal_sdk"></script>
   
 
   <link href="build/main.css" rel="stylesheet">
