--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -5,7 +5,7 @@
 		<button ion-button menuToggle>
 			<ion-icon name="menu"></ion-icon>
 		</button>
-		<ion-title>{{ 'Paypal donation' | translate }}</ion-title>
+		<ion-title>{{ 'Paypal payment' | translate }}</ion-title>
 	</ion-navbar>
 
 </ion-header>
