Fix export activity issue !

--- a/src/pages/choose-tone/choose-tone.html
+++ b/src/pages/choose-tone/choose-tone.html
@@ -26,8 +26,8 @@
 	<div class="div-item" *ngIf="displayTunning">
 		<ion-label>{{ 'Guitar tunning:' | translate }}</ion-label>
 		<ion-item>
-			<ion-select  [(ngModel)]="mTunning" [compareWith]="compareFn" interface="popover" class="center cookie25center " >
-				<ion-option  class="center  cookie20center" *ngFor="let tunning of TunningList" [value] = "tunning" >
+			<ion-select  [(ngModel)]="mTunning" [compareWith]="compareFn" interface="popover" class="center cookie30center " >
+				<ion-option  class="center" *ngFor="let tunning of TunningList" [value] = "tunning" >
 					{{tunning.name}}
 				</ion-option>
 			</ion-select>
