gestion du retour arrière

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,9 +8,12 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>{{ 'Find interesting new chord ideas on your own' | translate }}</h2>
+  <h2>{{ 'Find you own beautifull chord ideas ' | translate }}</h2>
   <p>
-    {{ 'Visit the demo and tutorials pages:' | translate }}
+    {{ 'This app is designed fort advanced guitarist.'| translate }}
+  </p>
+  <p>
+    {{ 'Visiting the tutorials pages are strongly advised:'| translate }}
   </p>
   <p>
     <button  style="color:red" (click)="openURL()">
