--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,9 +8,9 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>{{ 'Find you own beautifull chord ideas ' | translate }}</h2>
+  <h2>{{ 'Find your own beautifull chord ideas.' | translate }}</h2>
   <p>
-    {{ 'This app is designed fort advanced guitarist.'| translate }}
+    {{ 'This app is designed fort advanced guitarist.' | translate }}
   </p>
   <p>
     {{ 'Visiting the tutorials pages are strongly advised:'| translate }}
