trad and fix warnings

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,6 +20,10 @@
       {{ 'JazzGuitarVoicing Youtube channel' | translate }}</button>
     
   </p>
+  <p>
+    {{ 'If you have any request:'| translate }}
+  </p>
+  <h2>JazzGuitarVoicings@gmail.com</h2>
 
   
 </ion-content>
