add correct splash sreen

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,7 +23,7 @@
   <p>
     {{ 'If you have any request:'| translate }}
   </p>
-  <h2>JazzGuitarVoicings@gmail.com</h2>
+  <button (click)="sendEmail()">JazzGuitarVoicings@gmail.com</button>
 
   
 </ion-content>
