--- a/src/pages/edit-voicing/edit-voicing.html
+++ b/src/pages/edit-voicing/edit-voicing.html
@@ -48,7 +48,8 @@
 
 	<ion-grid *ngIf="!editView">
 		<ion-row  >
-			<ion-col class="div-item-inner "  style="width: 20%" col-3 *ngFor="let chord of chords;  let i = index" [ngStyle]="{'background-color': isSelectedChord(i) }"	 >												
+			<ion-col class="div-item-inner "  style="width: 20%" col-3 *ngFor="let chord of chords;  let i = index" 
+			[ngStyle]="{'background-color': isSelectedChord(i) }"	 >												
 				<div class="cookie20"  style="text-align: center ; "  (click)="itemTapped($event, chord)">
 					{{chord.getKey() + chord.getSharpOrFlat() +' '+ chord.getType().name}}
 				</div>            								
