--- a/src/pages/diagrams/diagrams.html
+++ b/src/pages/diagrams/diagrams.html
@@ -1,20 +1,27 @@
 <ion-header>
 
 	<ion-navbar>
-		<ion-title>{{ 'Chords on the fret board' | translate }}</ion-title>
+		<ion-title>{{ 'Chords list' | translate }}</ion-title>
+		<ion-buttons end >		
+			<div class="row">
+				<button  class="block" ion-fab mini icon-only (click)="toTop()">				
+					<i class="fa fa-chevron-circle-up fa-1x" ></i>
+				</button>
+				<button class="block" ion-fab mini icon-only (click)="toBottom()">				
+					<i class="fa fa-chevron-circle-down fa-1x" ></i>
+				</button>
+			</div>
+			
+		</ion-buttons>
+
 	</ion-navbar>
 
 </ion-header>
 
 
-<ion-content >
+<ion-content  >
 
-	<ion-fab top right>
-		<button ion-fab  (click)="toTop()"><ion-icon name="arrow-dropup-circle"></ion-icon></button>
-	</ion-fab>
-	<ion-fab bottom right  >
-		<button ion-fab  (click)="toBottom()"><ion-icon name="arrow-dropdown-circle"></ion-icon></button>
-	</ion-fab>
+	
 	<ion-label *ngIf="chord.diagrams.length==0">
 		{{ 'No chord found.' | translate }}
 	</ion-label>
@@ -22,10 +29,10 @@
 
 	<ion-grid >
 		<ion-row  >
-			<ion-col class="div-item-inner "  style="width: 20%" col-3 *ngFor="let diag of chord.diagrams;  let i = index" 
+			<ion-col   class="div-item-inner "  style="width: 20%" col-3 *ngFor="let diag of chord.diagrams;  let i = index" 
 			[ngStyle]="{'background-color': chord.idDiag==i? 'orange' : 'white'}"	 >												
      			
-				<div  style = "text-align:center;" (click)="chooseDiag($event,i)"  >
+				<div id="{{ 'col-' + i }}" style = "text-align:center;" (click)="chooseDiag($event,i)"  >
 					<chord-canvas   [diagram]="diag" [width]=85  [typeDisplay]=2 ></chord-canvas>	
 				</div>	
 				
