correction accords sus

--- a/src/pages/diagrams/diagrams.html
+++ b/src/pages/diagrams/diagrams.html
@@ -46,3 +46,8 @@
 	
 
 </ion-content>
+<ion-footer *ngIf="upAThousand" >
+	<ion-toolbar>
+	  <ion-title style = "text-align:center;" >{{cptTaken}}/{{diagLength}}</ion-title>
+	</ion-toolbar>
+  </ion-footer>
