--- a/src/pages/diagrams/diagrams.html
+++ b/src/pages/diagrams/diagrams.html
@@ -13,41 +13,35 @@
 				<button class="block" ion-fab mini icon-only (click)="toBottom()">				
 					<i class="fa fa-chevron-circle-down fa-1x" ></i>
 				</button>
-			</div>
-			
+			</div>			
 		</ion-buttons>
-
 	</ion-navbar>
 
 </ion-header>
 
 
-<ion-content  >
-
+<ion-content>
 	
 	<ion-label *ngIf="chord.diagrams.length==0">
 		{{ 'No chord found.' | translate }}
 	</ion-label>
 
-
-	<ion-grid >
+	<ion-grid  >
 		<ion-row  >
-			<ion-col   class="div-item-inner "  style="width: 20%" col-3 *ngFor="let diag of Diagrams| async | slice:0:cptTaken   ;  let i = index" 
+			<ion-col    class="div-item-inner "  style="width: 20%" col-3 *ngFor="let diag of Diagrams| async | slice:0:cptTaken   ;  let i = index" 
 			[ngStyle]="{'background-color': chord.idDiag==i? 'orange' : 'white'}"	 >												
      			
-				<div id="{{ 'col-' + i }}" style = "text-align:center;" (click)="chooseDiag($event,i)"  >
-					<chord-canvas   [diagram]="diag" [width]=85  [typeDisplay]=2 ></chord-canvas>	
+				<div  id="{{ 'col-' + i }}" style = "text-align:center;" (click)="chooseDiag($event,i)"  >
+					<chord-canvas   (change)="autoScroll()"  [diagram]="diag" [width]=85  [typeDisplay]=2 ></chord-canvas>	
 				</div>	
 				
 			</ion-col>
 		</ion-row>
 	</ion-grid>
 
-	
-
 </ion-content>
 <ion-footer *ngIf="upAThousand" >
 	<ion-toolbar>
 	  <ion-title style = "text-align:center;" >{{cptTaken}}/{{diagLength}}</ion-title>
 	</ion-toolbar>
-  </ion-footer>
+</ion-footer>
